# LightFieldParticleSystem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
application/: .gitignore
application/assets/shaders/: basic_vertex.vs  particle3d_vertex.vs  particle_fragment.fs  particle_fragment_light.fs  skybox_vertex.vs
application/scripts/: benchmark.py  image_convertor.py  particles_analyzer.py  psnr_ssim.py  result1.pckl  result3.pckl  result4.pckl  runanalyzer.bat
application/src/: angle_cachetable.h  camera.cpp  generator.cpp  generator_params.h  generator_store.cpp  generator_store.h  generator_texture.cpp  generator_texture.h  glad.c  model.h  model_normals.cpp  model_normals.h  model_vertex.h  particle.cpp  particle.h  particle_emitter.h  particle_flower.cpp  particle_leaf.cpp  particle_leaf.h  particle_random_model.cpp  particle_simulator.cpp  particle_simulator.h  particle_standart3d.cpp  particle_starship.h  shader.cpp  skybox.cpp  skybox.h  text_rectangle.cpp  text_rectangle.h  texture.cpp  ui_manager.h
assets/shaders/: basic_fragment.fs  basic_normal_fragment.fs  basic_vertex.vs  particle3d_vertex.vs  particle_fragment.fs  particle_fragment_light.fs  particle_simple_fragment.fs  particle_vertex.vs
binaries/linux/models/: licence.txt
binaries/linux/shaders/: basic2D_vertex.vs  basic_vertex_normals.vs
binaries/windows/: run_benchmark.bat
binaries/windows/imgs/skybox/: licence.txt
binaries/windows/shaders/: basic_normal_fragment.fs  particle_vertex.vs
include/glad/: glad.h
scripts/: analyzer.py  benchmark.py  particles_analyzer.py  psnr_ssim.py  result2.pckl  runanalyzer.bat
src/: angle_cachetable.cpp  angle_cachetable.h  camera.cpp  camera.h  generator.cpp  generator.h  generator_params.h  generator_store.cpp  generator_store.h  generator_texture.cpp  generator_texture.h  lightfield_ps_demo.cpp  lightfield_ps_demo.h  main.cpp  model.cpp  model.h  model_normals.cpp  particle.cpp  particle.h  particle_emitter.cpp  particle_emitter.h  particle_flower.h  particle_halfchange.cpp  particle_halfchange.h  particle_leaf.cpp  particle_leaf.h  particle_params.h  particle_random_model.cpp  particle_random_model.h  particle_simulator.cpp  particle_simulator.h  particle_standart3d.cpp  particle_standart3d.h  particle_starship.cpp  particle_starship.h  rectangle.cpp  rectangle.h  shader.cpp  shader.h  skybox.cpp  (+7 more)
text/src/: projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt-30-prilohy-appendices.tex  projekt.tex  vlna
